# personal-agents

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml  start_services.sh
.cursor/rules/: product-blueprint.mdc
api/: README.md  go.mod
api/cmd/hash-password/: main.go
api/cmd/server/: main.go
api/configs/: config.example.yaml
api/internal/auth/: handler.go  response.go  token.go
api/internal/config/: config.go
api/internal/database/: database.go
api/internal/middleware/: auth.go  cors.go  recover.go  request_log.go
api/internal/migration/: migration.go
api/internal/passwordbook/: crypto.go  handler.go  response.go
api/internal/server/: response.go  server.go
api/internal/user/: handler.go  response.go
api/migrations/: 000001_create_users_table.up.sql  000002_create_passwordbook_items_table.down.sql  000002_create_passwordbook_items_table.up.sql
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/lib/: auth.ts  langgraph.ts
front/: package-lock.json  package.json  pnpm-lock.yaml
front/src/: App.tsx  index.css
front/src/api/: auth.ts  client.ts  http.ts  passwordbook.ts
front/src/types/: app.ts  (+2 more)
lead_agent/: __init__.py  graph.py  model_config.py  prompt.py
personal_agent/: __init__.py  config.py  graph.py  nodes.py  state.py
personal_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_graph.py
(+8 files in other folders)
