[project]
name = "lead-agents"
version = "0.1.0"
description = "LangChain agent based lead agent services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain>=1.3.2,<2",
    "langchain-openai",
    "langgraph>=1.2.2,<2",
    "python-dotenv",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]",
]
